[package]
name = "misonomi-hp"
version = "0.1.1"
authors = ["misonomi <misonomi0612@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ["Window"] }
yew = "0.19.3"
seed = "0.8.0"

[features]
index = []
an-recruiter = []
kisekae = []
accessories = []
assemble = []
key-detector = []
