[package]
name = "misonomi-hp"
version = "0.1.1"
authors = ["misonomi <misonomi0612@gmail.com>"]
description = "A jumble of barely usefull things"
homepage = "https://misonomi.github.io/"
repository = "https://github.com/misonomi/misonomi.github.io"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-timer = "0.2.5"
web-sys = { version = "0.3.60", features = ["Window"] }
seed = "0.9.2"
strum = { version = "0.24.1", features = ["derive"] }
rand = "0.8.5"

[features]
index = []
an-recruiter = []
assemble = []
key-detector = []
an-recruite-buzzerquiz = []